--- a/Sheet_5/style.css
+++ b/Sheet_5/style.css
@@ -33,6 +33,9 @@
 
     border-collapse:collapse;
 }
+#update{
+    display: block;
+}
 .table table td{
     height: auto;
     width: 15rem;
@@ -160,7 +163,9 @@ p{
     width: 1rem;
     height: 1rem;
    }
-   
+   #updatebtn{
+    display: none;
+   }
   .searchbtn{
   
     border: none;
