--- a/Sheet6/sheet6.css
+++ b/Sheet6/sheet6.css
@@ -9,6 +9,13 @@
     position: relative;
   
 }
+.blur{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backdrop-filter: blur(2px); 
+    top:-5px
+}
 
 
 .main{
@@ -62,14 +69,22 @@
     display: flex;
     flex-direction: column;
     z-index: 2;
-    border-radius:20px;
-    background-color:whitesmoke ;
+    box-shadow: 10px 10px 10px 10px #84848b;
+    border-radius:10px  ;
+    background-color:whitesmoke;
     width:20rem;
     align-items: center;
+    padding: 1rem;
+    /* border: 10px solid transparent; */
+   
 
 }
+input{
+    background-color: rgb(34, 33, 33);
+    color:white;
+}
 .table{
-    z-index: 1;
+    z-index: 2;
 
 border-radius:10px;
 background-color:white ;
@@ -97,9 +112,12 @@ gap:1.5rem;
 }
 
 
-body{background-color: beige;
-
+#date{
+    color:white;
+    background-color: rgb(34, 33, 33);
 }
+
+
 #submit{
     color:rgb(34, 33, 33);
     
@@ -133,6 +151,7 @@ label{
 .textarea{
     border:3px solid black;
     background-color: rgb(34, 33, 33);
+    color:white;
 }
 
 span{
@@ -198,7 +217,10 @@ p{
     color: #9e9ea7;
    }
    
-   
+#companyname{
+    background-color: rgb(34, 33, 33);
+    color:white;
+}
    
    .icon {
     position: absolute;
@@ -253,8 +275,8 @@ button:active{
     display: flex;
     flex-direction: column;
     border-radius:20px;
-    background-color:#cda070 ;
-    box-shadow:10px 10px 10px 10px #FFE1A8;
+    background-color:white ;
+    box-shadow:10px 10px 10px 1px #84848b;
     width:25rem;
     align-items: center;
     border-spacing: 1rem;
